--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "add": "^2.0.6",
     "axios": "^0.26.1",
     "body-parser": "^1.20.0",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
+    "immutable": "^4.0.0",
     "mongodb": "^4.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
+    "react-search-box": "^2.2.1",
     "react-select": "^5.3.0",
-    "web-vitals": "^2.1.0"
+    "react-slick": "^0.29.0",
+    "web-vitals": "^2.1.0",
+    "yarn": "^1.22.18"
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"npm run server\"",
