--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.20.0",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
     "immutable": "^4.0.0",
